tests/ui/demux/fails_on_modifying_immut.rs
use mux_stream::demux;

use futures::StreamExt;

enum MyEnum {
    A(i32),
}

fn main() {
    demux!(i32_stream of MyEnum::A => i32_stream.next().await);
}
